# inventory_mgmt_tool

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example_commands.txt  pyproject.toml
src/: __init__.py  config.py  controller.py  exceptions.py  main.py  models.py  service.py  storage.py
tests/: __init__.py  test_cli_integration.py  test_controller.py  test_service.py  test_storage.py
